restaurant-k8s-files/1-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-prod
