restaurant-k8s-files/4-django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web
  namespace: restaurant-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-web
  template:
    metadata:
      labels:
        app: django-web
    spec:
      containers:
      - name: django-app
        image: sueesh144/steakhouse:latest
        command: ["gunicorn", "--bind", "0.0.0.0:8000", "restaurant.wsgi:application"]
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
