restaurant-k8s-files/7-cron-and-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-logger
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: fluentd
  template:
    metadata:
      labels:
        name: fluentd
    spec:
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1.16
        volumeMounts:
        - name: varlog
          mountPath: /var/log
      tolerations:
      - operator: "Exists"
        effect: "NoSchedule"
      # ADDED: This defines the volume that the container mounts
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
