restaurant-k8s-files/5-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: restaurant-prod
spec:
  selector:
    app: django-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant-prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-svc
            port:
              number: 80
